--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/barth1337/peat-api.git"
+  },
   "author": "Barth1337",
   "license": "MIT",
   "dependencies": {
