--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
     "jwt-simple": "^0.3.1",
-    "mongoose": "^4.1.8"
+    "mongoose": "^4.1.8",
+    "socket.io": "^1.3.7"
   }
 }
