--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Barth1337",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.0.5",
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
     "jwt-simple": "^0.3.1",
