--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "api for peat, designed to link to ios app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,8 @@
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
     "jwt-simple": "^0.3.1",
+    "mongodb-uri": "^0.9.7",
+    "mongoid": "0.0.1",
     "mongoose": "^4.1.8",
     "socket.io": "^1.3.7"
   }
