--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "barthdamon",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
