removes old leaf stuff

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seed.js",
     "debug": "NODE_ENV=development API_PASSWORD=fartpoop JWT_SECRET_TOKEN=secretStringFTW node debug app.js",
     "dev": "NODE_ENV=development API_PASSWORD=fartpoop JWT_SECRET_TOKEN=secretStringFTW nodemon app.js",
     "start": "node app.js"
