--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seed.js",
+    "seed": "NODE_ENV=development node seed.js",
     "debug": "NODE_ENV=development API_PASSWORD=fartpoop JWT_SECRET_TOKEN=secretStringFTW node debug app.js",
     "dev": "NODE_ENV=development API_PASSWORD=fartpoop JWT_SECRET_TOKEN=secretStringFTW nodemon app.js",
     "start": "node app.js"
@@ -20,6 +20,7 @@
     "bcrypt": "^0.8.5",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.0",
+    "chalk": "^1.1.1",
     "express": "^4.13.3",
     "jwt-simple": "^0.3.1",
     "mongodb-uri": "^0.9.7",
